# python-web-scraping

./: README.md  config.py  job_text.html  main.py  pyproject.toml  requirements.txt  scraper_notebook.ipynb  text.html
